[package]
name = "twitter-media-downloader"
version = "0.1.1"
edition = "2021"
authors=["hello@codingthings.com"]
description="Downloads photos from \"public\" Twitter accounts to your local disk."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.24"
tokio = {version = "1.21.1", features = ["macros"]}
clap = { version = "3.2.22", features = ["derive", "env"] }
log = "0.4.17"
env_logger = "0.9.1"
reqwest = "0.11.12"

[target.'cfg(unix)'.dependencies]
openssl = { version = " 0.10.41", features = ["vendored"] }

twitter-v2 = "0.1.7"