[package]
name = "twitter-media-downloader"
version = "0.1.1"
edition = "2021"
authors=["hello@codingthings.com"]
description="Downloads photos from \"public\" Twitter accounts to your local disk."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.24"
tokio = {version = "1.24.2", features = ["macros"]}
clap = { version = "3.2.22", features = ["derive", "env"] }
log = "0.4.17"
env_logger = "0.9.1"
reqwest = "0.11.16"
remove_dir_all = "0.8.0"
h2 = "0.3.17"

[target.'cfg(unix)'.dependencies]
openssl = { version = " 0.10.50", features = ["vendored"] }

twitter-v2 = "0.1.8"

[dev-dependencies]
openssl-src = "111.25.0"